add benchmark test marker and rename test quote defs

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,27 @@
 [pytest]
+
+# Markers for non-standard test categories
 markers =
-    locale_specific: marks locale_specific test (deselect with '-m "not locale_specific"')
+    localization: tests for non-English locales environments
+    performance: tests for performance benchmarks
+
+# Default: allows `pytest` to run all tests
+# except those marked as `localization` or `performance`
+addopts = -m "not localization and not performance"
+
+# Usage comments:
+; Run only unit tests (default):
+;   pytest
+;   pytest -svr A  # verbose, show summary, stop on first failure
+;
+; Run localization tests:
+;   pytest -m "localization"
+;
+; Run performance tests:
+;   pytest -m "performance"
+;
+; Run all tests:
+;   pytest -m ""
+;
+; Run unit and performance (no localization):
+;   pytest -m "not localization"
