--- a/.github/workflows/test-indicators-coverage.yml
+++ b/.github/workflows/test-indicators-coverage.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
+          cache: "pip"
 
       - name: Install dependencies
         run: |
