--- a/.github/workflows/test-indicators-ci.yml
+++ b/.github/workflows/test-indicators-ci.yml
@@ -17,7 +17,7 @@ jobs:
         dotnet-version: ["6.x", "8.x"]
 
     runs-on: ${{ matrix.os }}
-    name: "Py${{ matrix.python-version }}|.NET${{ matrix.dotnet-version }}»${{ matrix.os }}"
+    name: "Py${{ matrix.python-version }}/.NET${{ matrix.dotnet-version }} on ${{ matrix.os }}"
 
     env:
 
