--- a/.github/workflows/test-indicators-locale.yml
+++ b/.github/workflows/test-indicators-locale.yml
@@ -24,7 +24,7 @@ jobs:
         ]
         python-version: ['3.12']
 
-    name: "Py${{ matrix.python-version }}|${{ matrix.locale }}»${{ matrix.os }}"
+    name: "Py${{ matrix.python-version }} @${{ matrix.locale }} on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
 
     env:
@@ -56,11 +56,22 @@ jobs:
       - name: Set Linux locale to ${{ matrix.locale }}
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get update && sudo apt-get install -y locales
-          sudo locale-gen ${{ matrix.locale }}
-          sudo update-locale LANG=${{ matrix.locale }} LC_NUMERIC=${{ matrix.locale }} LC_MONETARY=${{ matrix.locale }}
+          # Install locale tools
+          sudo apt-get update
+          sudo apt-get install -y locales locales-all
+
+          # Generate required locale
+          sudo sed -i '/ru_RU.UTF-8/s/^# //g' /etc/locale.gen
+          sudo locale-gen
+
+          # Set the locale
+          sudo update-locale LANG=ru_RU.UTF-8 LC_ALL=ru_RU.UTF-8 LC_NUMERIC=ru_RU.UTF-8 LC_MONETARY=ru_RU.UTF-8
+
+          # Verify locale settings
           locale -a
           locale
+          echo "LANG=$LANG"
+          echo "LC_ALL=$LC_ALL"
 
       - name: Set macOS locale to ${{ matrix.locale }}
         if: runner.os == 'macOS'
