--- a/.github/workflows/test-indicators-locale.yml
+++ b/.github/workflows/test-indicators-locale.yml
@@ -6,9 +6,9 @@ name: Test localization
 on:
   push:
     branches: ["main"]
-
   pull_request:
     branches: ["*"]
+  workflow_dispatch:
 
 jobs:
 
