--- a/.github/workflows/test-indicators-full.yml
+++ b/.github/workflows/test-indicators-full.yml
@@ -1,11 +1,11 @@
 # For more information see:
 # https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Unit tests (CI)
+name: Unit tests (full matrix)
 
 on:
-  pull_request:
-    branches: ["*"]
+  push:
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -17,8 +17,8 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
-        python-version: ["3.8", "3.12"]
-        dotnet-version: ["6.x", "8.x"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        dotnet-version: ["6.x", "7.x", "8.x"]
 
     runs-on: ${{ matrix.os }}
     name: "Py${{ matrix.python-version }}/.NET${{ matrix.dotnet-version }} on ${{ matrix.os }}"
