--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ dotnet:
   src: "https://github.com/DaveSkender/Stock.Indicators/blob/main/src"
   charts: "https://raw.githubusercontent.com/DaveSkender/Stock.Indicators/main/docs/assets/charts"
 
- # this site URL refs
+# this site URL refs
 python:
   src: "https://github.com/facioquo/stock-indicators-python/blob/main/stock_indicators/indicators"
 
@@ -47,7 +47,8 @@ exclude:
     "*.pptx",
     ".offline",
     "docs/README.md",
-    "GemFile",
+    "docs/dx*",
+    "Gemfile",
     "node_modules",
     "vendor",
   ]
