--- a/.editorconfig
+++ b/.editorconfig
@@ -1,26 +1,24 @@
-# EditorConfig is awesome: http://EditorConfig.org
+# EditorConfig: https://EditorConfig.org
 
 # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
+# Global settings for all files
 [*]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-charset = utf-8
 
-# 4 space indentation
+indent_style = space
+indent_size = 2
+tab_width = 2
+
+#### File Type Overrides ####
+
 [*.{py,java,r,R}]
 indent_style = space
 indent_size = 4
 
-# 2 space indentation
-[*.{js,json,y{a,}ml,html,cwl}]
-indent_style = space
-indent_size = 2
-
 [*.{md,Rmd,rst}]
 trim_trailing_whitespace = false
-indent_style = space
-indent_size = 2
