--- a/.pylintrc
+++ b/.pylintrc
@@ -1,21 +1,20 @@
 [MASTER]
 extension-pkg-allow-list=
-    clr
+  clr
 
 ignore-long-lines=yes
 
 ignore-imports=yes
 
 disable=
-    C0103,
-    C0114,
-    C0115,
-    C0116,  
-    C0301,
-    C0321,
-    C0413,
-    E0401,
-    W0212,
-    #R0801,
-    R0903,
-    R0913
+  C0103,  # Variable name doesn't conform to snake_case naming style
+  C0114,  # Missing module docstring
+  C0115,  # Missing class docstring
+  C0116,  # Missing function or method docstring
+  C0301,  # Line too long
+  C0321,  # More than one statement on a single line
+  C0413,  # Import should be at the top of the file
+  E0401,  # Import error
+  W0212,  # Access to a protected member of a client class
+  R0903,  # Too few public methods
+  R0913   # Too many arguments
