--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@ updates:
     schedule:
       interval: "monthly"
   - package-ecosystem: "bundler"
-    directory: "/"
+    directory: "/docs"
     schedule:
       interval: "monthly"
