--- a/.github/workflows/test-indicators.yml
+++ b/.github/workflows/test-indicators.yml
@@ -47,13 +47,14 @@ jobs:
       - name: Set .NET Environment Variables on macOS
         if: matrix.os == 'macos-latest'
         run: |
-          echo "DOTNET_ROOT=/opt/homebrew/opt/dotnet" >> $GITHUB_ENV
-          echo "PATH=$PATH:/opt/homebrew/opt/dotnet" >> $GITHUB_ENV
+          echo "DOTNET_ROOT=$(dirname $(which dotnet))" >> $GITHUB_ENV
+          echo "PATH=$PATH:$DOTNET_ROOT" >> $GITHUB_ENV
           export DOTNET_ROOT=$(dirname $(which dotnet))
           export PATH=$PATH:$DOTNET_ROOT
           echo "DOTNET_ROOT is set to $DOTNET_ROOT and PATH is updated"
 
       - name: Verify DLL presence
+        if: matrix.os == 'macos-latest'
         run: |
           ls -la stock_indicators/_cslib/lib/
           if [ ! -f stock_indicators/_cslib/lib/Skender.Stock.Indicators.dll ]; then
