--- a/.github/workflows/test-indicators.yml
+++ b/.github/workflows/test-indicators.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
         python-version: ["3.12"] # Removed "3.8"
-        dotnet-version: ["6.0"]  # Removed "8.x"
+        dotnet-version: ["6.0.x"]  # Removed "8.x"
 
     runs-on: ${{ matrix.os }}
     name: "Py${{ matrix.python-version }}/.NET${{ matrix.dotnet-version }} on ${{ matrix.os }}"
@@ -26,7 +26,7 @@ jobs:
     env:
 
       # identifying primary configuration so only one reports to console
-      IS_PRIMARY: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12' && matrix.dotnet-version == '6.0' }}
+      IS_PRIMARY: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12' && matrix.dotnet-version == '6.0.x' }}
 
     steps:
       - name: Checkout source
@@ -44,15 +44,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: "pip"
 
-      - name: Set .NET Environment Variables on macOS
-        if: matrix.os == 'macos-latest'
-        run: |
-          echo "DOTNET_ROOT=$(dirname $(which dotnet))" >> $GITHUB_ENV
-          echo "PATH=$PATH:$DOTNET_ROOT" >> $GITHUB_ENV
-          export DOTNET_ROOT=$(dirname $(which dotnet))
-          export PATH=$PATH:$DOTNET_ROOT
-          echo "DOTNET_ROOT is set to $DOTNET_ROOT and PATH is updated"
-
       - name: Verify DLL presence
         if: matrix.os == 'macos-latest'
         run: |
@@ -61,22 +52,7 @@ jobs:
             echo "Skender.Stock.Indicators.dll is missing."
             exit 1
           fi
-
-      - name: Set Permissions for DLL on macOS
-        if: matrix.os == 'macos-latest'
-        run: |
           chmod +rx stock_indicators/_cslib/lib/Skender.Stock.Indicators.dll
-
-      - name: Install Dependencies on macOS
-        if: matrix.os == 'macos-latest'
-        run: |
-          brew install libffi
-          export LDFLAGS="-L/usr/local/opt/libffi/lib"
-          export CPPFLAGS="-I/usr/local/opt/libffi/include"
-          export PKG_CONFIG_PATH="/usr/local/opt/libffi/lib/pkgconfig"
-          echo "LDFLAGS=-L/usr/local/opt/libffi/lib" >> $GITHUB_ENV
-          echo "CPPFLAGS=-I/usr/local/opt/libffi/include" >> $GITHUB_ENV
-          echo "PKG_CONFIG_PATH=/usr/local/opt/libffi/lib/pkgconfig" >> $GITHUB_ENV
 
       - name: Install requirements
         run: |
